@@ -1,6 +1,7 @@
 Revision history for Test-Harness
 
 3.10    ---
+        - fault unknown TAP tokens in TAP v13 or later.
 
 3.09    2008-02-10
         - support for HARNESS_PERL_SWITCHES containing things like 
